Cricao dos testes

--- a/FaleMais.Tests/FaleMais.Tests.csproj
+++ b/FaleMais.Tests/FaleMais.Tests.csproj
@@ -42,11 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Models\FaleMaisPlanoTest.cs" />
+    <Compile Include="Models\TarifaTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\FaleMais\FaleMais.csproj">
+      <Project>{89c7ea10-3f3d-42b8-865c-70ff04fb1ff1}</Project>
+      <Name>FaleMais</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
